# HaskellBackendProject

./: README.md  scotty-ggst-web-api.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/0881e69e/: cabal_macros.h
.stack-work/ghci/4a2c92e0/: cabal_macros.h
.stack-work/ghci/52d58763/: cabal_macros.h
.stack-work/ghci/b1fa6682/: cabal_macros.h
.stack-work/ghci/ca811956/: cabal_macros.h
.stack-work/ghci/e93506e7/: cabal_macros.h
.stack-work/ghci/ec10f042/: cabal_macros.h
.stack-work/ghci/ef1fff22/: cabal_macros.h
src/: Main.hs
src/DB/: DB.hs
src/Models/: Character.hs
src/Routes/: Get.hs
