name:                scotty-ggst-web-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scotty-webapp#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Roberts
maintainer:          mau5mat@gmail.com
copyright:           2022 Matt Roberts
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scotty-ggst-web-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:     Models.Character,
                     Routes.Get,
                     DB.DB

  build-depends:       base >= 4.7 && < 5,
                       time,
                       aeson,
                       scotty,
                       text,
                       unordered-containers,
                       vector,
                       opaleye,
                       postgresql-simple,
                       product-profunctors

